compatibility-tests/compile-fail/tests/ui/duplication-enum.rs
use snafu::Snafu;

#[derive(Debug, Snafu)]
#[snafu(visibility(pub))]
#[snafu(visibility(pub))]
enum EnumError {
    AVariant,
}

fn main() {}
